--- a/colab_test.ipynb
+++ b/colab_test.ipynb
@@ -29,7 +29,7 @@
       "metadata": {
         "id": "0kHZ8buA0zd-"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -46,7 +46,7 @@
           "height": 59
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -267,14 +267,12 @@
       "cell_type": "code",
       "source": [
         "with open('/content/drive/MyDrive/colab_test2.txt', 'w') as f:\n",
-        "    f.write('Hello colab')\n",
-        "#/content/colab_test.txt\n",
-        "#/content/drive/MyDrive/colab_test.rar"
+        "    f.write('Hello colab')"
       ],
       "metadata": {
         "id": "hKVIEPu4-E4X"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -285,7 +283,7 @@
       "metadata": {
         "id": "epdlgT-M1rFe"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -298,7 +296,7 @@
       "metadata": {
         "id": "QgMI51uD2L0G"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -318,7 +316,7 @@
         "id": "SiJUyQ7695-j",
         "outputId": "eb85cdc5-6d52-4de3-e9a1-80dc84392baa"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -365,7 +363,7 @@
         "id": "0Mau3Y3ygCLf",
         "outputId": "c99e949c-97ee-4a35-e996-f2b05e264643"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5651,7 +5649,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "23TOba33L4qf",
         "colab": {
@@ -5722,7 +5720,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "V1G82GuO-tez",
         "colab": {
