--- a/Copy_of_Keras_Fashion_MNIST.ipynb
+++ b/Copy_of_Keras_Fashion_MNIST.ipynb
@@ -132,11 +132,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "Zo-Yk6LFGfSf"
+        "id": "Zo-Yk6LFGfSf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9d467040-35ef-4f80-b989-e09d4b20a3d9"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-labels-idx1-ubyte.gz\n",
+            "29515/29515 [==============================] - 0s 1us/step\n",
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-images-idx3-ubyte.gz\n",
+            "26421880/26421880 [==============================] - 1s 0us/step\n",
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-labels-idx1-ubyte.gz\n",
+            "5148/5148 [==============================] - 0s 0us/step\n",
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-images-idx3-ubyte.gz\n",
+            "4422102/4422102 [==============================] - 0s 0us/step\n"
+          ]
+        }
+      ],
       "source": [
         "import tensorflow as tf\n",
         "import numpy as np\n",
@@ -167,7 +186,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "W7gMbs70GxA7"
       },
@@ -212,33 +231,46 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "pWEYmd_hIWg8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9158ce17-19f2-40ba-b7b0-9b25cca3e8cb"
+        "outputId": "00ca19c4-0449-452f-dc82-254eade6a6df"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Running on TPU  ['10.109.182.194:8470']\n",
+            "Running on TPU  ['10.45.6.122:8470']\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:tensorflow:TPU system grpc://10.45.6.122:8470 has already been initialized. Reinitializing the TPU can cause previously created variables on TPU to be lost.\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
             "All devices:  [LogicalDevice(name='/job:worker/replica:0/task:0/device:TPU:0', device_type='TPU'), LogicalDevice(name='/job:worker/replica:0/task:0/device:TPU:1', device_type='TPU'), LogicalDevice(name='/job:worker/replica:0/task:0/device:TPU:2', device_type='TPU'), LogicalDevice(name='/job:worker/replica:0/task:0/device:TPU:3', device_type='TPU'), LogicalDevice(name='/job:worker/replica:0/task:0/device:TPU:4', device_type='TPU'), LogicalDevice(name='/job:worker/replica:0/task:0/device:TPU:5', device_type='TPU'), LogicalDevice(name='/job:worker/replica:0/task:0/device:TPU:6', device_type='TPU'), LogicalDevice(name='/job:worker/replica:0/task:0/device:TPU:7', device_type='TPU')]\n",
             "TPU (s):\n",
             "Epoch 1/5\n",
-            "60/60 [==============================] - 4s 25ms/step - loss: 1.1004 - sparse_categorical_accuracy: 0.6923\n",
+            "60/60 [==============================] - 8s 23ms/step - loss: 1.1175 - sparse_categorical_accuracy: 0.6880\n",
             "Epoch 2/5\n",
-            "60/60 [==============================] - 1s 23ms/step - loss: 0.5224 - sparse_categorical_accuracy: 0.8205\n",
+            "60/60 [==============================] - 1s 23ms/step - loss: 0.5269 - sparse_categorical_accuracy: 0.8214\n",
             "Epoch 3/5\n",
-            "60/60 [==============================] - 1s 22ms/step - loss: 0.4258 - sparse_categorical_accuracy: 0.8533\n",
+            "60/60 [==============================] - 1s 22ms/step - loss: 0.4352 - sparse_categorical_accuracy: 0.8494\n",
             "Epoch 4/5\n",
-            "60/60 [==============================] - 1s 22ms/step - loss: 0.3760 - sparse_categorical_accuracy: 0.8686\n",
+            "60/60 [==============================] - 1s 23ms/step - loss: 0.3813 - sparse_categorical_accuracy: 0.8660\n",
             "Epoch 5/5\n",
-            "60/60 [==============================] - 1s 23ms/step - loss: 0.3379 - sparse_categorical_accuracy: 0.8818\n",
-            "14.357613682999983\n"
+            "60/60 [==============================] - 1s 25ms/step - loss: 0.3447 - sparse_categorical_accuracy: 0.8776\n",
+            "19.147741785000107\n"
           ]
         }
       ],
@@ -263,11 +295,11 @@
         "\n",
         "def tpu():\n",
         "    with strategy.scope():\n",
-        "        model = create_model()\n",
-        "        model.compile(\n",
-        "            optimizer=tf.keras.optimizers.Adam(learning_rate=1e-3, ),\n",
-        "            loss='sparse_categorical_crossentropy',\n",
-        "            metrics=['sparse_categorical_accuracy'])\n",
+        "      model = create_model()\n",
+        "      model.compile(\n",
+        "          optimizer=tf.keras.optimizers.Adam(learning_rate=1e-3, ),\n",
+        "          loss='sparse_categorical_crossentropy',\n",
+        "          metrics=['sparse_categorical_accuracy'])\n",
         "\n",
         "    model.fit(\n",
         "        x_train.astype(np.float32), y_train.astype(np.float32),\n",
@@ -322,9 +354,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "bdad1023-e4f5-48de-b438-5467ec0bea2b"
+        "outputId": "96c698b4-6bb3-4b7d-c77b-fd015ecca9c0"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -332,19 +364,48 @@
           "text": [
             "GPU (s):\n",
             "Epoch 1/5\n",
-            "60/60 [==============================] - 17s 102ms/step - loss: 1.0879 - sparse_categorical_accuracy: 0.6826\n",
+            "60/60 [==============================] - 16s 107ms/step - loss: 1.1113 - sparse_categorical_accuracy: 0.6794\n",
             "Epoch 2/5\n",
-            "60/60 [==============================] - 6s 103ms/step - loss: 0.5163 - sparse_categorical_accuracy: 0.8227\n",
+            "60/60 [==============================] - 6s 108ms/step - loss: 0.5315 - sparse_categorical_accuracy: 0.8162\n",
             "Epoch 3/5\n",
-            "60/60 [==============================] - 6s 102ms/step - loss: 0.4269 - sparse_categorical_accuracy: 0.8515\n",
+            "60/60 [==============================] - 7s 109ms/step - loss: 0.4357 - sparse_categorical_accuracy: 0.8494\n",
             "Epoch 4/5\n",
-            "60/60 [==============================] - 6s 103ms/step - loss: 0.3716 - sparse_categorical_accuracy: 0.8682\n",
+            "60/60 [==============================] - 7s 111ms/step - loss: 0.3764 - sparse_categorical_accuracy: 0.8687\n",
             "Epoch 5/5\n",
-            "60/60 [==============================] - 6s 104ms/step - loss: 0.3368 - sparse_categorical_accuracy: 0.8819\n",
-            "42.67049448099999\n"
+            "60/60 [==============================] - 7s 113ms/step - loss: 0.3456 - sparse_categorical_accuracy: 0.8775\n",
+            "83.33613268900001\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def cpu():\n",
+        "  with tf.device('/cpu:0'):\n",
+        "    model = create_model()\n",
+        "    model.compile(\n",
+        "        optimizer=tf.keras.optimizers.Adam(learning_rate=1e-3, ),\n",
+        "        loss='sparse_categorical_crossentropy',\n",
+        "        metrics=['sparse_categorical_accuracy'])\n",
+        "\n",
+        "  model.fit(\n",
+        "      x_train.astype(np.float32), y_train.astype(np.float32),\n",
+        "      epochs=5,\n",
+        "      steps_per_epoch=60,\n",
+        "      validation_data=(x_test.astype(np.float32), y_test.astype(np.float32)),\n",
+        "      validation_freq=17\n",
+        "  )\n",
+        "# cpu()\n",
+        "print('CPU (s):')\n",
+        "cpu_time = timeit.timeit('cpu()', number=1, setup=\"from __main__ import cpu\")\n",
+        "print(cpu_time)"
+      ],
+      "metadata": {
+        "id": "h2owIBZPUuu0"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -365,33 +426,33 @@
       },
       "outputs": [],
       "source": [
-        "LABEL_NAMES = ['t_shirt', 'trouser', 'pullover', 'dress', 'coat', 'sandal', 'shirt', 'sneaker', 'bag', 'ankle_boots']\n",
+        "# LABEL_NAMES = ['t_shirt', 'trouser', 'pullover', 'dress', 'coat', 'sandal', 'shirt', 'sneaker', 'bag', 'ankle_boots']\n",
         "\n",
         "\n",
-        "cpu_model = create_model()\n",
-        "cpu_model.load_weights('./fashion_mnist.h5')\n",
+        "# cpu_model = create_model()\n",
+        "# cpu_model.load_weights('./fashion_mnist.h5')\n",
         "\n",
-        "from matplotlib import pyplot\n",
-        "%matplotlib inline\n",
+        "# from matplotlib import pyplot\n",
+        "# %matplotlib inline\n",
         "\n",
-        "def plot_predictions(images, predictions):\n",
-        "  n = images.shape[0]\n",
-        "  nc = int(np.ceil(n / 4))\n",
-        "  f, axes = pyplot.subplots(nc, 4)\n",
-        "  for i in range(nc * 4):\n",
-        "    y = i // 4\n",
-        "    x = i % 4\n",
-        "    axes[x, y].axis('off')\n",
+        "# def plot_predictions(images, predictions):\n",
+        "#   n = images.shape[0]\n",
+        "#   nc = int(np.ceil(n / 4))\n",
+        "#   f, axes = pyplot.subplots(nc, 4)\n",
+        "#   for i in range(nc * 4):\n",
+        "#     y = i // 4\n",
+        "#     x = i % 4\n",
+        "#     axes[x, y].axis('off')\n",
         "    \n",
-        "    label = LABEL_NAMES[np.argmax(predictions[i])]\n",
-        "    confidence = np.max(predictions[i])\n",
-        "    if i > n:\n",
-        "      continue\n",
-        "    axes[x, y].imshow(images[i])\n",
-        "    axes[x, y].text(0.5, 0.5, label + '\\n%.3f' % confidence, fontsize=14)\n",
+        "#     label = LABEL_NAMES[np.argmax(predictions[i])]\n",
+        "#     confidence = np.max(predictions[i])\n",
+        "#     if i > n:\n",
+        "#       continue\n",
+        "#     axes[x, y].imshow(images[i])\n",
+        "#     axes[x, y].text(0.5, 0.5, label + '\\n%.3f' % confidence, fontsize=14)\n",
         "\n",
-        "  pyplot.gcf().set_size_inches(8, 8)  \n",
-        "  plot_predictions(np.squeeze(x_test[:16]), cpu_model.predict(x_test[:16]))"
+        "#   pyplot.gcf().set_size_inches(8, 8)  \n",
+        "#   plot_predictions(np.squeeze(x_test[:16]), cpu_model.predict(x_test[:16]))"
       ]
     },
     {
@@ -410,11 +471,7 @@
     }
   ],
   "metadata": {
-    "accelerator": "TPU",
     "colab": {
-      "collapsed_sections": [
-        "N6ZDpd9XzFeN"
-      ],
       "provenance": [],
       "include_colab_link": true
     },
