--- a/MyFirstColabNotebook.ipynb
+++ b/MyFirstColabNotebook.ipynb
@@ -13,6 +13,71 @@
     {
       "cell_type": "code",
       "source": [
+        "print(\"Helo colab\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nGA3pwwWO30P",
+        "outputId": "6bf3a58e-23a4-4fd8-bdbb-5108c316ff5a"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "helo colab\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!nvidia-smi"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "B3rqKJ9aMPWv",
+        "outputId": "d1128729-1b7d-49a1-f60f-f6418edd1a24"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Fri Feb 17 02:25:30 2023       \n",
+            "+-----------------------------------------------------------------------------+\n",
+            "| NVIDIA-SMI 510.47.03    Driver Version: 510.47.03    CUDA Version: 11.6     |\n",
+            "|-------------------------------+----------------------+----------------------+\n",
+            "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
+            "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
+            "|                               |                      |               MIG M. |\n",
+            "|===============================+======================+======================|\n",
+            "|   0  Tesla T4            Off  | 00000000:00:04.0 Off |                    0 |\n",
+            "| N/A   66C    P0    30W /  70W |      0MiB / 15360MiB |      0%      Default |\n",
+            "|                               |                      |                  N/A |\n",
+            "+-------------------------------+----------------------+----------------------+\n",
+            "                                                                               \n",
+            "+-----------------------------------------------------------------------------+\n",
+            "| Processes:                                                                  |\n",
+            "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\n",
+            "|        ID   ID                                                   Usage      |\n",
+            "|=============================================================================|\n",
+            "|  No running processes found                                                 |\n",
+            "+-----------------------------------------------------------------------------+\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "!pip install jiwer\n",
         "from jiwer import wer"
       ],
@@ -47,22 +112,190 @@
     {
       "cell_type": "code",
       "source": [
-        "print(\"Helo colab\")"
+        "%lsmagic"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 225
+        },
+        "id": "Ut9xQsRWsNG7",
+        "outputId": "d0c3d4b9-9c48-429a-e2ec-c732fb77a02e"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Available line magics:\n",
+              "%alias  %alias_magic  %autoawait  %autocall  %automagic  %autosave  %bookmark  %cat  %cd  %clear  %colors  %conda  %config  %connect_info  %cp  %debug  %dhist  %dirs  %doctest_mode  %ed  %edit  %env  %gui  %hist  %history  %killbgscripts  %ldir  %less  %lf  %lk  %ll  %load  %load_ext  %loadpy  %logoff  %logon  %logstart  %logstate  %logstop  %ls  %lsmagic  %lx  %macro  %magic  %man  %matplotlib  %mkdir  %more  %mv  %notebook  %page  %pastebin  %pdb  %pdef  %pdoc  %pfile  %pinfo  %pinfo2  %pip  %popd  %pprint  %precision  %prun  %psearch  %psource  %pushd  %pwd  %pycat  %pylab  %qtconsole  %quickref  %recall  %rehashx  %reload_ext  %rep  %rerun  %reset  %reset_selective  %rm  %rmdir  %run  %save  %sc  %set_env  %shell  %store  %sx  %system  %tb  %tensorflow_version  %time  %timeit  %unalias  %unload_ext  %who  %who_ls  %whos  %xdel  %xmode\n",
+              "\n",
+              "Available cell magics:\n",
+              "%%!  %%HTML  %%SVG  %%bash  %%bigquery  %%capture  %%debug  %%file  %%html  %%javascript  %%js  %%latex  %%markdown  %%perl  %%prun  %%pypy  %%python  %%python2  %%python3  %%ruby  %%script  %%sh  %%shell  %%svg  %%sx  %%system  %%time  %%timeit  %%writefile\n",
+              "\n",
+              "Automagic is ON, % prefix IS NOT needed for line magics."
+            ],
+            "application/json": {
+              "line": {
+                "automagic": "AutoMagics",
+                "autocall": "AutoMagics",
+                "alias_magic": "BasicMagics",
+                "lsmagic": "BasicMagics",
+                "magic": "BasicMagics",
+                "page": "BasicMagics",
+                "pprint": "BasicMagics",
+                "colors": "BasicMagics",
+                "xmode": "BasicMagics",
+                "quickref": "BasicMagics",
+                "doctest_mode": "BasicMagics",
+                "gui": "BasicMagics",
+                "precision": "BasicMagics",
+                "notebook": "BasicMagics",
+                "save": "CodeMagics",
+                "pastebin": "CodeMagics",
+                "loadpy": "CodeMagics",
+                "load": "CodeMagics",
+                "edit": "KernelMagics",
+                "config": "ConfigMagics",
+                "prun": "ExecutionMagics",
+                "pdb": "ExecutionMagics",
+                "debug": "ExecutionMagics",
+                "tb": "ExecutionMagics",
+                "run": "ExecutionMagics",
+                "timeit": "ExecutionMagics",
+                "time": "ExecutionMagics",
+                "macro": "ExecutionMagics",
+                "load_ext": "ExtensionMagics",
+                "unload_ext": "ExtensionMagics",
+                "reload_ext": "ExtensionMagics",
+                "history": "HistoryMagics",
+                "recall": "HistoryMagics",
+                "rerun": "HistoryMagics",
+                "logstart": "LoggingMagics",
+                "logstop": "LoggingMagics",
+                "logoff": "LoggingMagics",
+                "logon": "LoggingMagics",
+                "logstate": "LoggingMagics",
+                "pinfo": "NamespaceMagics",
+                "pinfo2": "NamespaceMagics",
+                "pdef": "NamespaceMagics",
+                "pdoc": "NamespaceMagics",
+                "psource": "NamespaceMagics",
+                "pfile": "NamespaceMagics",
+                "psearch": "NamespaceMagics",
+                "who_ls": "NamespaceMagics",
+                "who": "NamespaceMagics",
+                "whos": "NamespaceMagics",
+                "reset": "NamespaceMagics",
+                "reset_selective": "NamespaceMagics",
+                "xdel": "NamespaceMagics",
+                "alias": "OSMagics",
+                "unalias": "OSMagics",
+                "rehashx": "OSMagics",
+                "pwd": "OSMagics",
+                "cd": "OSMagics",
+                "env": "OSMagics",
+                "set_env": "OSMagics",
+                "pushd": "OSMagics",
+                "popd": "OSMagics",
+                "dirs": "OSMagics",
+                "dhist": "OSMagics",
+                "sc": "OSMagics",
+                "sx": "OSMagics",
+                "system": "OSMagics",
+                "bookmark": "OSMagics",
+                "pycat": "OSMagics",
+                "pip": "Other",
+                "conda": "PackagingMagics",
+                "matplotlib": "PylabMagics",
+                "pylab": "PylabMagics",
+                "killbgscripts": "ScriptMagics",
+                "autoawait": "AsyncMagics",
+                "ed": "Other",
+                "hist": "Other",
+                "rep": "Other",
+                "clear": "KernelMagics",
+                "less": "KernelMagics",
+                "more": "KernelMagics",
+                "man": "KernelMagics",
+                "connect_info": "KernelMagics",
+                "qtconsole": "KernelMagics",
+                "autosave": "KernelMagics",
+                "mkdir": "Other",
+                "rmdir": "Other",
+                "mv": "Other",
+                "rm": "Other",
+                "cp": "Other",
+                "cat": "Other",
+                "ls": "Other",
+                "ll": "Other",
+                "lf": "Other",
+                "lk": "Other",
+                "ldir": "Other",
+                "lx": "Other",
+                "store": "StoreMagics",
+                "shell": "Other",
+                "tensorflow_version": "Other"
+              },
+              "cell": {
+                "js": "DisplayMagics",
+                "javascript": "DisplayMagics",
+                "latex": "DisplayMagics",
+                "svg": "DisplayMagics",
+                "html": "DisplayMagics",
+                "markdown": "DisplayMagics",
+                "prun": "ExecutionMagics",
+                "debug": "ExecutionMagics",
+                "timeit": "ExecutionMagics",
+                "time": "ExecutionMagics",
+                "capture": "ExecutionMagics",
+                "sx": "OSMagics",
+                "system": "OSMagics",
+                "!": "OSMagics",
+                "writefile": "OSMagics",
+                "script": "ScriptMagics",
+                "sh": "Other",
+                "bash": "Other",
+                "perl": "Other",
+                "ruby": "Other",
+                "python": "Other",
+                "python2": "Other",
+                "python3": "Other",
+                "pypy": "Other",
+                "SVG": "Other",
+                "HTML": "Other",
+                "file": "Other",
+                "bigquery": "Other",
+                "shell": "Other"
+              }
+            }
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "nGA3pwwWO30P",
-        "outputId": "6bf3a58e-23a4-4fd8-bdbb-5108c316ff5a"
+        "id": "xy-yezmoWRTE",
+        "outputId": "0aa41d7c-2ed2-47ee-cfe4-427795c2a659"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "helo colab\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ]
@@ -485,11 +718,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "SiJUyQ7695-j"
+        "id": "SiJUyQ7695-j",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8ef5fa3b-32d1-406e-dc90-9ade2b3c65dd"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "17.5 µs ± 6.07 µs per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
+          ]
+        }
+      ],
       "source": [
         "def sum():\n",
         "  sum=0\n",
@@ -732,32 +977,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 221
+          "height": 222
         },
         "id": "fX7o94zcI43F",
-        "outputId": "4db70ad5-6c67-4fae-addf-3259fc49cc20"
+        "outputId": "a0e88fc1-d8f3-4350-fcdb-11479afeb491"
       },
       "outputs": [
         {
+          "output_type": "display_data",
           "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
             "text/html": [
               "<svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 450 400\" width=\"200\" height=\"200\">\n",
               "  <rect x=\"80\" y=\"60\" width=\"250\" height=\"250\" rx=\"20\" style=\"fill:red; stroke:black; fill-opacity:0.7\" />\n",
               "  <rect x=\"180\" y=\"110\" width=\"250\" height=\"250\" rx=\"40\" style=\"fill:blue; stroke:black; fill-opacity:0.5;\" />\n",
               "</svg>\n",
               "\n",
+              "<!-- <svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 800 400\" width=\"400\" height=\"400\">\n",
+              "   <rect x=\"10\" y=\"00\" width=\"300\" height=\"100\" rx=\"0\" style=\"fill:orange; stroke:black; fill-opacity:1.0\" />\n",
+              "   <rect x=\"10\" y=\"100\" width=\"300\" height=\"100\" rx=\"0\" style=\"fill:white; stroke:black; fill-opacity:1.0;\" />\n",
+              "   <rect x=\"10\" y=\"200\" width=\"300\" height=\"100\" rx=\"0\" style=\"fill:green; stroke:black; fill-opacity:1.0;\" />\n",
+              "</svg> -->\n",
+              "\n",
               "<marquee style='width: 30%; color: blue;'><b>Whee!</b></marquee>\n"
-            ],
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
             ]
           },
-          "metadata": {},
-          "output_type": "display_data"
+          "metadata": {}
         }
       ],
       "source": [
@@ -766,6 +1017,12 @@
         "  <rect x=\"80\" y=\"60\" width=\"250\" height=\"250\" rx=\"20\" style=\"fill:red; stroke:black; fill-opacity:0.7\" />\n",
         "  <rect x=\"180\" y=\"110\" width=\"250\" height=\"250\" rx=\"40\" style=\"fill:blue; stroke:black; fill-opacity:0.5;\" />\n",
         "</svg>\n",
+        "\n",
+        "<!-- <svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 800 400\" width=\"400\" height=\"400\">\n",
+        "   <rect x=\"10\" y=\"00\" width=\"300\" height=\"100\" rx=\"0\" style=\"fill:orange; stroke:black; fill-opacity:1.0\" />\n",
+        "   <rect x=\"10\" y=\"100\" width=\"300\" height=\"100\" rx=\"0\" style=\"fill:white; stroke:black; fill-opacity:1.0;\" />\n",
+        "   <rect x=\"10\" y=\"200\" width=\"300\" height=\"100\" rx=\"0\" style=\"fill:green; stroke:black; fill-opacity:1.0;\" />\n",
+        "</svg> -->\n",
         "\n",
         "<marquee style='width: 30%; color: blue;'><b>Whee!</b></marquee>"
       ]
