--- a/Copy_of_TensorFlow_with_GPU.ipynb
+++ b/Copy_of_TensorFlow_with_GPU.ipynb
@@ -65,53 +65,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        "gpu_info = !nvidia-smi\n",
-        "gpu_info = '\\n'.join(gpu_info)\n",
-        "if gpu_info.find('failed') >= 0:\n",
-        "  print('Not connected to a GPU')\n",
-        "else:\n",
-        "  print(gpu_info)"
-      ],
-      "metadata": {
-        "id": "KaP6bzoXP8HM",
-        "outputId": "44acc372-2de8-4295-ca4b-2ad314232268",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Sun Dec 18 00:00:46 2022       \n",
-            "+-----------------------------------------------------------------------------+\n",
-            "| NVIDIA-SMI 460.32.03    Driver Version: 460.32.03    CUDA Version: 11.2     |\n",
-            "|-------------------------------+----------------------+----------------------+\n",
-            "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
-            "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
-            "|                               |                      |               MIG M. |\n",
-            "|===============================+======================+======================|\n",
-            "|   0  Tesla T4            Off  | 00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   43C    P0    25W /  70W |      0MiB / 15109MiB |      0%      Default |\n",
-            "|                               |                      |                  N/A |\n",
-            "+-------------------------------+----------------------+----------------------+\n",
-            "                                                                               \n",
-            "+-----------------------------------------------------------------------------+\n",
-            "| Processes:                                                                  |\n",
-            "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\n",
-            "|        ID   ID                                                   Usage      |\n",
-            "|=============================================================================|\n",
-            "|  No running processes found                                                 |\n",
-            "+-----------------------------------------------------------------------------+\n"
-          ]
-        }
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "v3fE7KmKRDsH"
@@ -126,13 +79,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Y04m-jvKRDsJ",
-        "outputId": "204de887-8848-4240-efab-9b6bde5528a7"
+        "outputId": "a6c99379-7046-44c3-d1a2-95a1de5ff636"
       },
       "outputs": [
         {
@@ -142,10 +95,10 @@
             "Time (s) to convolve 32x7x7x3 filter over random 100x100x100x3 images (batch x height x width x channel).\n",
             "Sum of ten runs.\n",
             "CPU (s):\n",
-            "3.377226027000006\n",
+            "3.4118386400000134\n",
             "GPU (s):\n",
-            "0.03892644500001552\n",
-            "GPU speedup over CPU: 86x\n"
+            "0.041795995000001085\n",
+            "GPU speedup over CPU: 81x\n"
           ]
         }
       ],
@@ -169,15 +122,15 @@
         "\n",
         "def gpu():\n",
         "  with tf.device('/device:GPU:0'):\n",
-        "    random_image_gpu = tf.random.normal((100, 100, 100, 3))\n",
+        "    random_image_gpu = tf.random.normal((100, 100, 100, 3)) #batch x height x width x channel\n",
         "    net_gpu = tf.keras.layers.Conv2D(32, 7)(random_image_gpu)\n",
         "    return tf.math.reduce_sum(net_gpu)\n",
-        "  \n",
+        " \n",
         "# # We run each op once to warm up; see: https://stackoverflow.com/a/45067900\n",
-        "# %timeit cpu()\n",
-        "# %timeit gpu()\n",
         "cpu()\n",
         "gpu()\n",
+        "# %timeit cpu()\n",
+        "# %timeit gpu()\n",
         "\n",
         "# Run the op several times.\n",
         "print('Time (s) to convolve 32x7x7x3 filter over random 100x100x100x3 images '\n",
@@ -234,7 +187,7 @@
         "id": "MTVCpZTANZOP",
         "outputId": "4fe50917-4791-4389-a4c6-1319ad42d1dd"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -260,8 +213,8 @@
       "display_name": "Python 3",
       "name": "python3"
     },
-    "accelerator": "GPU",
-    "gpuClass": "standard"
+    "gpuClass": "standard",
+    "accelerator": "GPU"
   },
   "nbformat": 4,
   "nbformat_minor": 0
