--- a/MyFirstColabNotebook.ipynb
+++ b/MyFirstColabNotebook.ipynb
@@ -45,14 +45,22 @@
     {
       "cell_type": "code",
       "source": [
-        "!nvidia-smi"
+        "# !nvidia-smi\n",
+        "print(\"查看GPU訊息\")\n",
+        "!/opt/bin/nvidia-smi\n",
+        "print(\"\\n查看硬碟容量\")\n",
+        "!df -lh\n",
+        "print(\"\\n查看CPU\")\n",
+        "!cat /proc/cpuinfo | grep model\\ name\n",
+        "print(\"\\n查看system memory\")\n",
+        "!cat /proc/meminfo | grep MemTotal"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "B3rqKJ9aMPWv",
-        "outputId": "d1128729-1b7d-49a1-f60f-f6418edd1a24"
+        "outputId": "750394aa-983a-46e7-827e-f216c9985b28"
       },
       "execution_count": null,
       "outputs": [
@@ -60,16 +68,17 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Fri Feb 17 02:25:30 2023       \n",
+            "查看GPU訊息\n",
+            "Mon May 22 08:40:25 2023       \n",
             "+-----------------------------------------------------------------------------+\n",
-            "| NVIDIA-SMI 510.47.03    Driver Version: 510.47.03    CUDA Version: 11.6     |\n",
+            "| NVIDIA-SMI 525.85.12    Driver Version: 525.85.12    CUDA Version: 12.0     |\n",
             "|-------------------------------+----------------------+----------------------+\n",
             "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
             "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
             "|                               |                      |               MIG M. |\n",
             "|===============================+======================+======================|\n",
             "|   0  Tesla T4            Off  | 00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   66C    P0    30W /  70W |      0MiB / 15360MiB |      0%      Default |\n",
+            "| N/A   43C    P8    10W /  70W |      0MiB / 15360MiB |      0%      Default |\n",
             "|                               |                      |                  N/A |\n",
             "+-------------------------------+----------------------+----------------------+\n",
             "                                                                               \n",
@@ -79,7 +88,26 @@
             "|        ID   ID                                                   Usage      |\n",
             "|=============================================================================|\n",
             "|  No running processes found                                                 |\n",
-            "+-----------------------------------------------------------------------------+\n"
+            "+-----------------------------------------------------------------------------+\n",
+            "\n",
+            "查看硬碟容量\n",
+            "Filesystem      Size  Used Avail Use% Mounted on\n",
+            "overlay          79G   24G   55G  30% /\n",
+            "tmpfs            64M     0   64M   0% /dev\n",
+            "shm             5.7G     0  5.7G   0% /dev/shm\n",
+            "/dev/root       2.0G 1005M  952M  52% /usr/sbin/docker-init\n",
+            "tmpfs           6.4G  124K  6.4G   1% /var/colab\n",
+            "/dev/sda1        75G   41G   35G  55% /opt/bin/.nvidia\n",
+            "tmpfs           6.4G     0  6.4G   0% /proc/acpi\n",
+            "tmpfs           6.4G     0  6.4G   0% /proc/scsi\n",
+            "tmpfs           6.4G     0  6.4G   0% /sys/firmware\n",
+            "\n",
+            "查看CPU\n",
+            "model name\t: Intel(R) Xeon(R) CPU @ 2.20GHz\n",
+            "model name\t: Intel(R) Xeon(R) CPU @ 2.20GHz\n",
+            "\n",
+            "查看內存\n",
+            "MemTotal:       13294264 kB\n"
           ]
         }
       ]
@@ -6000,6 +6028,60 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "%%html\n",
+        "hello <b>world\n",
+        "<p>hello Taiwan</p>\n",
+        "\n",
+        "<table border=\"1\" cellspacing=\"0\">\n",
+        "    <tr>\n",
+        "        <td>row 1, cell 1</td>\n",
+        "        <td>row 1, cell 2</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "        <td>row 2, cell 1</td>\n",
+        "        <td>row 2, cell 2</td>\n",
+        "    </tr>\n",
+        "</table>"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 107
+        },
+        "id": "8KHHPcQ3t_b5",
+        "outputId": "710cbda5-6a01-4920-d56e-50079e3acf01"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "hello <b>world\n",
+              "<p>hello Taiwan</p>\n",
+              "\n",
+              "<table border=\"1\" cellspacing=\"0\">\n",
+              "    <tr>\n",
+              "        <td>row 1, cell 1</td>\n",
+              "        <td>row 1, cell 2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "        <td>row 2, cell 1</td>\n",
+              "        <td>row 2, cell 2</td>\n",
+              "    </tr>\n",
+              "</table>\n"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "colab": {
@@ -6281,13 +6363,15 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "gpuType": "T4",
       "include_colab_link": true
     },
     "gpuClass": "standard",
     "kernelspec": {
       "display_name": "Python 3",
       "name": "python3"
-    }
+    },
+    "accelerator": "GPU"
   },
   "nbformat": 4,
   "nbformat_minor": 0
